--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ project/web gedeelte/bin/web gedeelte.pdb
 project/web gedeelte/obj/Debug/web gedeelte.csprojAssemblyReference.cache
 project/web gedeelte/obj/Debug/web gedeelte.dll
 project/web gedeelte/obj/Debug/web gedeelte.pdb
+project/web gedeelte/obj/Debug/web gedeelte.csprojAssemblyReference.cache
